# Semestralni-projekt

./: README.md  fitness_kalkulacka.cpp  projekt  projekt.md  stromecek.cpp  zkusebni.cpp
Semestralni_projekt/: projekt.md
ZpetDoMinulosti/: CMakeLists.txt
ZpetDoMinulosti/src/: AudioManager.cpp  AudioManager.h  Button.cpp  Button.h  GamePlayScreen.cpp  GamePlayScreen.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  QuestionManager.cpp  QuestionManager.h  SettingScreen.cpp  SettingScreen.h  main.cpp
ukoly_z_hodin/: fitness_kalkulacka  zkusebni
ukoly_z_hodin/advents_of_code/: AoC_12  AoC_12.cpp  AoC_12_2  AoC_12_2.cpp  AoC_15  AoC_2.cpp  AoC_7  advents_of_code_2
ukoly_z_hodin/linked_list/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Student.cpp  Student.h  main.cpp
ukoly_z_hodin/sprava-studentu/: README.md  main  main.cpp  studenti.txt  studenti_serazeno.txt
ukoly_z_hodin/stromecekk/: stromecek
ukoly_z_hodin_c++/: main.py
ukoly_z_hodin_c++/advents_of_code/: AoC_15.cpp  AoC_6  AoC_6.cpp  AoC_7.cpp
ukoly_z_hodin_c++/linked_list/: LinkedList.cpp  LinkedList.h  Node.cpp  main.cpp  studenti.txt
ukoly_z_hodin_c++/sprava-studentu/: studenti_serazeno.txt
ukoly_z_hodin_c++/vzorova_zkouska/: README.md  logger.cpp  logger.h  main.cpp  server.cpp  server.h
ukoly_z_hodin_c++/vzorova_zkouska2/: main.cpp  sensor.cpp  sensor.h  smarthome.cpp  smarthome.h
ukoly_z_hodin_python/: caesarova_sifra.py  errors_only.txt  evidence_studentu.py  filtrace_logu.py  frekvencni_analyza.py  hadej_cislo.py  interaktivni_analyza.py  prvni_priklad.py
(+8 files in other folders)
